Fixed a few layout bugs and made the table green.

--- a/web/public/styles.css
+++ b/web/public/styles.css
@@ -20,6 +20,7 @@ body{
 	
 	-moz-transform: rotate(-30deg);
 	-webkit-transform: rotate(-30deg);
+	-o-transform: rotate(-30deg);
 	transform: rotate(-30deg);
 	
 	-webkit-transition: all 1s ease-in-out;
@@ -30,6 +31,7 @@ body{
 
 #beta:hover {
 	-moz-transform: scale(1.1) rotate(-25deg);
+	-o-transform: scale(1.1) rotate(-25deg);
 	-webkit-transform: scale(1.1) rotate(-25deg);
 	transform: scale(1.1) rotate(-25deg);
 }
@@ -111,7 +113,7 @@ h1 {
 	text-align: left;
 	padding: 6px 6px 6px 12px;
 	margin: 0;
-	background-color: #CAE8EA;
+	background-color: rgb(220, 240, 140);
 }
 #schedules td {
 	border: 1px solid #C1DAD7;
@@ -277,28 +279,36 @@ h1 {
 	width: 150px;
 	margin: 12px auto 12px auto;
 }
+
 .back_button {
 	-moz-box-shadow:inset 0px 1px 0px 0px #adadad;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #adadad;
 	box-shadow:inset 0px 1px 0px 0px #adadad;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #525252), color-stop(1, #212121) );
-	background:-moz-linear-gradient( center top, #525252 5%, #212121 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#525252', endColorstr='#212121');
-	background-color:#525252;
+	background: #7d7e7d;
+	background: -moz-linear-gradient(top, #7d7e7d 0%, #0e0e0e 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7d7e7d), color-stop(100%,#0e0e0e));
+	background: -webkit-linear-gradient(top, #7d7e7d 0%,#0e0e0e 100%);
+	background: -o-linear-gradient(top, #7d7e7d 0%,#0e0e0e 100%);
+	background: -ms-linear-gradient(top, #7d7e7d 0%,#0e0e0e 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 );
+	background: linear-gradient(top, #7d7e7d 0%,#0e0e0e 100%);
 	-moz-border-radius:6px;
 	-webkit-border-radius:6px;
 	border-radius:6px;
 	border:1px solid #141414;
-	display:inline-block;
 	color:#ebebeb;
 	text-decoration:none;
 	text-shadow:1px 1px 0px #8c8c8c;
 	text-align: center;
 }.back_button:hover {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #212121), color-stop(1, #525252) );
-	background:-moz-linear-gradient( center top, #212121 5%, #525252 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#212121', endColorstr='#525252');
-	background-color:#212121;
+	background: #0e0e0e;
+	background: -moz-linear-gradient(top, #0e0e0e 0%, #7d7e7d 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0e0e0e), color-stop(100%,#7d7e7d));
+	background: -webkit-linear-gradient(top, #0e0e0e 0%,#7d7e7d 100%);
+	background: -o-linear-gradient(top, #0e0e0e 0%,#7d7e7d 100%);
+	background: -ms-linear-gradient(top, #0e0e0e 0%,#7d7e7d 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0e0e0e', endColorstr='#7d7e7d',GradientType=0 );
+	background: linear-gradient(top, #0e0e0e 0%,#7d7e7d 100%);
 }.back_button:active {
 	position:relative;
 	top:1px;
